--- a/myfirstApp/Properties/launchSettings.json
+++ b/myfirstApp/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:58825",
-      "sslPort": 44344
+      "applicationUrl": "http://localhost:25250",
+      "sslPort": 44341
     }
   },
   "profiles": {
-    "myfirstApp": {
+    "myfirstapp": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7229;http://localhost:5043",
+      "applicationUrl": "https://localhost:7231;http://localhost:5222",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
